@@ -1,7 +1,11 @@
+import org.gradle.api.tasks.testing.logging.TestExceptionFormat
+import org.gradle.api.tasks.testing.logging.TestLogEvent
+import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
 import java.time.Instant
 
 plugins {
-    `java-library`
+    `kotlin-jvm`()
+    dokka()
     jacoco
     distribution
     `maven-publish`
@@ -23,6 +27,8 @@ group = rootProject.group
 version = "${rootProject.version}.0.0"
 
 dependencies {
+    implementation(org.jetbrains.kotlin.`kotlin-stdlib-jdk8`)
+
     testImplementation(platform(org.junit.`junit-bom`))
     testImplementation(org.junit.jupiter.`junit-jupiter-api`)
     testImplementation(org.junit.jupiter.`junit-jupiter-params`)
@@ -31,23 +37,16 @@ dependencies {
     testRuntimeOnly(org.junit.jupiter.`junit-jupiter-engine`)
 }
 
-tasks.jar<Jar> {
-    manifest {
-        attributes["API-Title"] = project.name
-        attributes["API-Version"] = project.version
-    }
-}
-
 val sourceJar by tasks.registering(Jar::class) {
     classifier = "sources"
     from(sourceSets.main.get().allJava)
     manifest = tasks.jar.get().manifest
 }
 
-val javadocJar by tasks.registering(Jar::class) {
-    dependsOn(tasks.javadoc)
-    classifier = "javadoc"
-    from(tasks.javadoc.get().destinationDir)
+val dokkaJar by tasks.registering(Jar::class) {
+    dependsOn(tasks.dokka)
+    classifier = "dokka"
+    from(tasks.dokka.get().outputDirectory)
     manifest = tasks.jar.get().manifest
 }
 
@@ -56,7 +55,7 @@ distributions {
         contents {
             from(tasks.jar)
             from(sourceJar)
-            from(javadocJar)
+            from(dokkaJar)
         }
     }
 }
@@ -66,7 +65,7 @@ publishing {
         create<MavenPublication>("mavenJava") {
             artifact(tasks.jar.get())
             artifact(sourceJar.get())
-            artifact(javadocJar.get())
+            artifact(dokkaJar.get())
         }
     }
 }
@@ -94,48 +93,33 @@ bintray {
 }
 
 tasks {
-    val moduleName = "runtimemodels.chazm.api"
-    val junit = "org.junit.jupiter.api"
-
-    compileJava<JavaCompile> {
-        inputs.property("moduleName", moduleName)
-        doFirst {
-            options.compilerArgs = listOf("--module-path", classpath.asPath)
-            classpath = files()
+    compileKotlin {
+        kotlinOptions {
+            jvmTarget = "1.8"
         }
     }
-    compileTestJava<JavaCompile> {
-        inputs.property("moduleName", moduleName)
-        doFirst {
-            options.compilerArgs = listOf(
-                    "--module-path", classpath.asPath,
-                    "--add-modules", junit,
-                    "--add-reads", "$moduleName=$junit",
-                    "--patch-module", "$moduleName=" + files(sourceSets.test.get().java.srcDirs).asPath
-            )
-            classpath = files()
+    compileTestKotlin {
+        kotlinOptions {
+            jvmTarget = "1.8"
         }
     }
-    test<Test> {
+    test {
         useJUnitPlatform()
-        inputs.property("moduleName", moduleName)
-        doFirst {
-            jvmArgs = listOf(
-                    "--module-path", classpath.asPath,
-                    "--add-modules", "ALL-MODULE-PATH",
-                    "--add-reads", "$moduleName=$junit",
-                    "--add-reads", "$moduleName=org.assertj.core",
-                    "--add-opens", "$moduleName/$moduleName=org.junit.platform.commons",
-                    "--patch-module", "$moduleName=${files(sourceSets.test.get().java.outputDir).asPath}"
-            )
-            classpath = files()
+        testLogging {
+            events(TestLogEvent.FAILED, TestLogEvent.PASSED, TestLogEvent.SKIPPED)
         }
     }
-    jacocoTestReport<JacocoReport> {
+    jacocoTestReport {
         reports {
             csv.isEnabled = false
             xml.isEnabled = true
             html.isEnabled = System.getenv("CI").isNullOrBlank()
+        }
+    }
+    jar {
+        manifest {
+            attributes["API-Title"] = project.name
+            attributes["API-Version"] = project.version
         }
     }
 }
